--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -40,7 +40,7 @@
                 <strong>auto</strong> sync
               </li>
               <li class="plan-action">
-                  <a href="/signup?plan=Free" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
+                  <a href="/signup?plan=Free" ng-click="$event.stopPropagation()" class="btn btn-default btn-lg">Sign up</a>
               </li>
             </ul>
           </div>
@@ -66,7 +66,7 @@
                 <strong>auto</strong> sync
               </li>
               <li class="plan-action">
-               <a href="/signup?plan=Entry" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
+               <a href="/signup?plan=Entry" ng-click="$event.stopPropagation()" class="btn btn-default btn-lg">Sign up</a>
               </li>
             </ul>
           </div>
@@ -92,7 +92,7 @@
                 <strong>auto</strong> sync
               </li>
               <li class="plan-action">
-               <a href="/signup?plan=Startup" ng-click="$event.stopPropagation()" class="btn btn-danger btn-lg">Sign up</a>
+               <a href="/signup?plan=Startup" ng-click="$event.stopPropagation()" class="btn btn-default btn-lg">Sign up</a>
              </li>
          </ul>
      </div>
@@ -118,7 +118,7 @@
                 <strong><i class="fa fa-bolt"></i> rapid</strong> sync
             </li>
             <li class="plan-action">
-             <a href="/signup?plan=Growth" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
+             <a href="/signup?plan=Growth" ng-click="$event.stopPropagation()" class="btn btn-default btn-lg">Sign up</a>
          </li>
      </ul>
     </div>
@@ -147,7 +147,7 @@
               <strong><i class="fa fa-bolt"></i> rapid</strong> sync
           </li>
           <li class="plan-action">
-           <a href="mailto:admin@openfn.org" class="btn btn-success btn-lg">Contact</a>
+           <a href="mailto:admin@openfn.org" class="btn btn-default btn-lg">Contact</a>
           </li>
         </ul>
       </div>
