--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -8,25 +8,25 @@
       <div class="row">
       <div class="col-xs-6 col-sm-2 col-sm-offset-2">
         <div class="numbers">
-          <h3>{{submissionCount | number }}</h3>
+          <h3 class="live">{{submissionCount | number }}</h3>
           <h4>Transactions</h4>
         </div>
       </div>
       <div class="col-xs-6 col-sm-2">
         <div class="numbers">
-          <h3>{{productPublicCount}}</h3>
+          <h3 class="live">{{productPublicCount}}</h3>
           <h4>Technologies</h4>
         </div>
       </div>
       <div class="col-xs-6 col-sm-2">
         <div class="numbers">
-          <h3>{{productConnectedCount}}</h3>
+          <h3 class="live">{{productConnectedCount}}</h3>
           <h4>Connected Apps</h4>
         </div>
       </div>
       <div class="col-xs-6 col-sm-2">
         <div class="numbers">
-          <h3>{{orgCount}}</h3>
+          <h3 class="live">{{orgCount}}</h3>
           <h4>Organizations</h4>
         </div>
       </div>
@@ -36,6 +36,9 @@
   </header>
 
   <!-- Page Content -->
+  <br>
+  <br>
+  <br>
 
   <div class="featurette" id="marketplace">
     <div class="container">
