--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -44,11 +44,11 @@
     <div class="container">
       <a href="#/marketplace/">
         <div class="row">
-          <div class="col-md-5 col-md-offset-1 col-md-push-6">
+          <!-- <div class="col-md-5 col-md-offset-1 col-md-push-6"> -->
             <!-- <div class="openmarket-featurette-image center-block"> -->
             <!-- </div> -->
-          </div>
-          <div class="col-md-6 col-md-pull-6">
+          <!-- </div> -->
+          <div class="col-md-8">
             <h2 class="featurette-heading">
               open<strong>Marketplace</strong> helps you find the tools you need.
             </h2>
@@ -70,11 +70,11 @@
     <div class="container">
       <a href="/mappings" ng-click="$event.stopPropagation()">
         <div class="row">
-          <div class="col-md-5">
+          <!-- <div class="col-md-5"> -->
             <!-- <div class="openintegrations-featurette-image center-block"> -->
             <!-- </div> -->
-          </div>
-          <div class="col-md-6 col-md-offset-1 text-right">
+          <!-- </div> -->
+          <div class="col-md-8 col-md-push-4 text-right">
             <h2 class="featurette-heading">
               open<strong>Integrations</strong> make<br/> apps more powerful.
             </h2>
@@ -83,12 +83,6 @@
               Need surveys captured with ODK to show up in your Salesforce system? 
               Want MPESA payments to sync with your clinic management platform? 
               We make data integration delightful. With an efficient, open-source, modular design, the number of endpoints is growing fast.
-            </p>
-            <br>
-            <p>
-              <a href="#/marketplace/">
-                +<i class="fa fa-plug"></i> Vote to connect new technologies.
-              </a>
             </p>
           </div>
         </div>
@@ -100,11 +94,11 @@
     <div class="container">
       <a href="#/release-notes">
         <div class="row">
-          <div class="col-md-5 col-md-offset-1 col-md-push-6">
+          <!-- <div class="col-md-5 col-md-offset-1 col-md-push-6"> -->
             <!-- <div class="openideas-featurette-image center-block"> -->
             <!-- </div> -->
-          </div>
-          <div class="col-md-6 col-md-pull-6">
+          <!-- </div> -->
+          <div class="col-md-8">
             <h2 class="featurette-heading">
               open<strong>Content</strong> makes it easier<br/> to lead successful implementations.
             </h2>
@@ -125,7 +119,8 @@
 
   <div class="featurette dark">
     <div class="container">
-      <div class="row text-right">
+      <div class="row">
+      <div class="col-md-8 col-md-push-4 text-right">
         <h2 class="featurette-heading">
           open<strong>Partnerships</strong> make<br/> this all possible
         </h2>
