particles for rory

--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -38,6 +38,8 @@
   <!-- Page Content -->
   <br>
   <br>
+  <div id="particles-js"></div>
+  <script src="/assets/particles.js"></script>
   <br>
 
   <div class="featurette" id="marketplace">
