--- a/public/the_bridge_templates/mappings/edit.html
+++ b/public/the_bridge_templates/mappings/edit.html
@@ -1,3 +1,4 @@
+<br><br><br><br>
 <input type="text" ng-model="mapping.name" class='form-control' ng-change="saveMapping()" />
 <!-- #fix, why is this here??? -->
 <div class="form-group">
@@ -18,7 +19,7 @@
   <label>
     <input type="checkbox" ng-model='mapping.active' ng-checked='mapping.active' ng-change="saveMapping()" ng-disabled="!mapping.enabled || !mapping.can_be_enabled"> Auto-sync (10 min)
   </label>
-  <label>Source <i class="fa fa-cube"></i> : <strong>ODK "{{mapping.odk_form.name}}"</strong></label>
+  <label>Source: <strong>ODK "{{mapping.odk_form.name}}"</strong></label>
 </div>
 <div class="row sf-row" bs-affix data-offset-top="225" data-on-affix="onAffix()" data-on-unaffix="onUnaffix()">
   <div class='col-md-12' ng-include="'/the_bridge_templates/mappings/sf_row.html'">
