--- a/public/the_bridge_templates/mappings/sf_row.html
+++ b/public/the_bridge_templates/mappings/sf_row.html
@@ -26,12 +26,12 @@
         <div class='row'>
           <div class='col-md-12'>
             <input type="checkbox" ng-click="toggleRepeat(sfObject)" ng-checked="sfObject.is_repeat" /> Repeat Block Destination
-            <a href="#" class='btn btn-danger pull-right' ng-click="deleteSfObject(sfObject)">
+            <a href="#" class='btn btn-default pull-right' ng-click="deleteSfObject(sfObject)">
               Remove
               <span class='fa fa-minus-circle'></span>
             </a>
 
-            <a href='#' class='btn btn-info pull-right' ng-click='refreshSfFields(sfObject)'>
+            <a href='#' class='btn btn-default pull-right' ng-click='refreshSfFields(sfObject)'>
               Refresh Object
               <span class='fa fa-refresh'></span>
             </a>
