--- a/public/the_bridge_templates/mappings/odk_column.html
+++ b/public/the_bridge_templates/mappings/odk_column.html
@@ -4,7 +4,7 @@
       <th width="5%">uuid</th>
       <th width="50%">Source Field Name</th>
       <th width="20%">Source Field Type</th>
-      <th width="25%">Destination Field</th>
+      <th width="25%" class="dest">Destination Field</th>
     </tr>
   </thead>
   <tbody>
@@ -35,7 +35,7 @@
       </td>
       <td style="width: 50%" ng-style="odkFormField.displayStyle">{{odkFormField.field_name}}</td>
       <td style="width: 20%">{{odkFormField.field_type}}</td>
-      <td style='width: 25%'>
+      <td style='width: 25%' class="dest">
         <ul class="list-group sortable-location sf-connected-sortable sf-target" ui-sortable="sfSortableOptions" ng-model="odkFormField.salesforceFields">
           <li class="list-group-item sf-field" 
             title="{{sfField.field_name}} ({{sfField.properties.type}}){{sfField.properties.nillable ? '' : ' (required)' }}{{sfField.properties.unique ? ' (unique)' : ''}}" 
