--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -27,7 +27,8 @@
           <!-- <i class="fa fa-qrcode"></i> -->
           <!-- <i class="fa fa-wheelchair"></i> -->
           <!-- <i class="fa fa-apple"></i> -->
-        </div>   
+        </div>
+        <div class="logo"></div>   
         <div class="numbers">
           <div class="col-xs-6 col-sm-2 col-sm-offset-2">
             <h3 class="live">{{submissionCount | number }}</h3>
@@ -156,7 +157,7 @@
   particlesJS("particles-js", {
     "particles": {
       "number": {
-        "value": 120,
+        "value": 150,
         "density": {
           "enable": true,
           "value_area": 800
@@ -181,7 +182,7 @@
         }
       },
       "opacity": {
-        "value": 0.5,
+        "value": 0.6,
         "random": false,
         "anim": {
           "enable": false,
@@ -204,7 +205,7 @@
         "enable": true,
         "distance": 150,
         "color": "#ffffff",
-        "opacity": 0.4,
+        "opacity": 0.45,
         "width": 1
       },
       "move": {
