--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -103,25 +103,26 @@
                   <div class="show-product">
                     <div class="product">
                       <div class="tag-list">
-                        <div ng-repeat="tag in product.tag_list" class="tag label label-info">
+                        <div ng-repeat="tag in product.tag_list track by $index" class="tag label label-info">
                           {{tag.name}}
                         </div>
                         <a data-toggle="modal" class="edit-link">
                         Add/Edit Tags
-                      </a>
-                      <!-- <form method = "post"> -->
-                        <div class = "tag-editor">
-                          <span ng-repeat = "n in product.tag_list" class = "post-tag">
+                        </a>
+                        <div style="position:relative">
+                          <div class = "tag-editor">
+                            <span ng-repeat = "n in product.tag_list track by $index" class = "post-tag">
                             {{n.name}}
-                            <span ng-click = "deleteTag(n,product)" class = "delete-tag" title = "remove this tag">X</span>
-                          </span>
-                          <input type = "text" ng-model="searchText" ng-change = "searchTags(searchText,product)"></input>
+                              <span ng-click = "deleteTag(n,product)" class = "delete-tag" title = "remove this tag">X
+                              </span>
+                            </span>
+                            <input type = "text" ng-model="searchText" ng-change = "searchTags(searchText,product)">
+                          </div>
+                          <div ng-repeat = "tag in tag_match track by $index">
+                            <a ng-click = "addTag(tag,product)">{{tag.name}}<a>
+                          </div>
                         </div>
                         <button ng-click = "submitTags(product.tag_list,product)" class="btn btn-success" type="submit">Submit</button>
-                        <div ng-repeat = "tag in tag_match track by $index">
-                          <a ng-click = "addTag(tag,product)">{{tag.name}}<a>
-                        </div>
-                      <!-- </form> -->
                       </div>
                     </div>
                   </div>
