solved text box issue

--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -108,7 +108,7 @@
                     {{tag.name}}
                   </div>
                   <a data-toggle="modal" class="edit-link">
-                  Add/edit tags
+                  Add or edit tags
                   </a>
                   <!-- <div style="position:relative"> -->
                     <div class = "tag-editor">
