--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -32,6 +32,13 @@
             </div>
           </div>
         </div>
+        <div class="row">
+            <div class="col-lg-12">
+              <a style="float: left;" href="/tags/" class="btn btn-default">
+                <i class="fa fa-plus"></i> Browse feature tags.
+              </a>
+            </div>
+        </div>
         <div class="product-list row" ng-if="isLoading">
           <div class="col-xs-12 center">
           <br><br><br><br><br>
