--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -118,7 +118,7 @@
 
                   </div>
                   <div class="tag-suggestions">
-                    <div ng-repeat="tag in tag_match track by $index |filter:tag">
+                    <div ng-repeat="tag in tag_match | orderBy:'name' | orderBy:'-tag_count'" >
                       <a ng-click="addTag(tag,product)" ng-init = "tagging_count(tag)" class="post-tag tag-box">{{tag.name}} x{{tag.tag_count}}</a>
                     </div>
                   </div>
