--- a/public/the_bridge_templates/product/edit.html
+++ b/public/the_bridge_templates/product/edit.html
@@ -1,3 +1,4 @@
+<div class="edit">
 <div ng-controller="ProductController as productCtrl" class="row">
   <br>
   <div class="container">
@@ -112,4 +113,5 @@
         <p>We encourage suggestions from all members of the community whether they be product developers, consultants, or end-user organizations. There are a few required fields that cover basic and summary information. Beyond that, we ask that listings focus on the functionality of each technology and what it enables users to do and avoid statements that place more value on one technology over another. Your submission must be reviewed and accepted by one of the core contributors at openfn before it is updated. Again, please refrain from using value words to ensure the listing is accepted promptly.</p>
         <p>Terms and Conditions: Open[Fn] reserves editorial decision-making power over listings that are published. We reserve the right to edit posts or request revisions. In the spirit of openness, we also maintain the right to indicate the author of listings on the openMarketplace.</p>
         <button ng-click="editProduct(product)" class="btn btn-success" type="submit">Submit Edits</button>
+</div>
 </div>
